modify craeted user

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "template.html"%}
-{% load staticfiles %}
+{% comment %} {% load staticfiles %} {% endcomment %}
 
 {% block content %}
 <div class="row">
